--- a/journal/202107.md
+++ b/journal/202107.md
@@ -7,6 +7,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 { intro, major news of the month, don't put any links here
 
 - 3 consensus changes on the horizon
+- maybe Dev progress: dcrd optimizations, DCRDEX ETH integration, maybe godcr mass cleanup
 
 }
 
@@ -29,22 +30,20 @@ Contents: { sync }
 
 The work reported below has the "merged to master" status unless noted otherwise. It means that the work is completed, reviewed, and integrated into the source code that advanced users can [build and run](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c), but is not yet available in release binaries for regular users.
 
-{ hint: below add an overview of activity for each project. add any other project that warrants a paragraph. drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans }
-
 <a id="dcrd" />
 
 **[dcrd](https://github.com/decred/dcrd)**
 
 - updated the `UtxoBackend` implementation to use `leveldb` directly rather than using the `database` package. This results in ~10% faster initial blockchain download and ~12% reduced memory usage.
 - block index changed to use [short keys](https://github.com/decred/dcrd/pull/2685), resulting in ~30 MiB memory savings
-- added [limits](https://github.com/decred/dcrd/pull/2675) for RPC requests to help further harden the server against potential abuse in non-standard configurations on poorly-configured networks
+- added size [limits](https://github.com/decred/dcrd/pull/2675) for RPC requests to help further harden the server against potential abuse in non-standard configurations on poorly-configured networks
 - added a more strict [origin check](https://github.com/decred/dcrd/pull/2676) for WebSocket connections
 - smaller fixes and cleanup
 
 At this point we have 3 upcoming consensus changes at different stages of development:
 
 - reverting to the originally-proposed treasury expenditure policy (to [fix spending](202106.md#new-treasury-bug) from the new treasury) has a draft [DCP](https://github.com/decred/dcps/pull/20) and a draft [pull request](https://github.com/decred/dcrd/pull/2680)
-- explicit version upgrades has an approved [proposal](https://github.com/decred/dcrd/pull/2680) and some support code already merged (like the standard script handling we covered in [June issue](202106.md#dcrd))
+- explicit version upgrades has an approved [proposal](https://github.com/decred/dcrd/pull/2680) and some support code already merged (like the standard script handling we covered [in June](202106.md#dcrd))
 - automatic ticket revocations has an approved [proposal](https://proposals.decred.org/record/e2d7b7d)
 
 <a id="dcrwallet" />
@@ -53,7 +52,7 @@ At this point we have 3 upcoming consensus changes at different stages of develo
 
 - added an RPC method that will allow Decrediton to discover active addresses more efficiently
 - added an RPC method to [revoke](https://github.com/decred/dcrwallet/pull/2061) tickets in SPV mode (also for Decrediton)
-- fixed invalid passphrase errors when concurrently [unlocking](https://github.com/decred/dcrwallet/pull/2067) the wallet
+- fixed concurrency issues when [unlocking](https://github.com/decred/dcrwallet/pull/2067) the wallet
 
 <a id="decrediton" />
 
@@ -70,7 +69,7 @@ User-facing:
 
 Internal:
 
-- migrated to new [Politeia API](https://github.com/decred/decrediton/pull/3495) which was released with [v1.0.0](https://github.com/decred/politeia/releases/tag/v1.0.0)
+- migrated to new [Politeia API](https://github.com/decred/decrediton/pull/3495)
 - automated tests for [Transaction](https://github.com/decred/decrediton/pull/3518) page
 - removed the use of [winston](https://github.com/decred/decrediton/pull/3536) logging library to reduce project's dependency tree
 
@@ -80,7 +79,7 @@ Internal:
 
 User-facing:
 
-- capture additional proposal [metadata](https://github.com/decred/politeiagui/pull/2469) ([backend](https://github.com/decred/politeia/pull/1444) like USD funding limit, start date, estimated end date, and domain. This will allow to improve and automate contractor invoice validation, as well as compute aggregate stats on Politeia.
+- capture additional proposal [metadata](https://github.com/decred/politeiagui/pull/2469) like USD funding limit, start date, estimated end date, and domain. This will allow to improve and automate contractor invoice validation, and also to generate proposal stats on Politeia.
 - added [rate limiting](https://github.com/decred/politeia/pull/1448) for email notifications to prevent malicious behavior
 - show who [censored](https://github.com/decred/politeiagui/pull/2454) a record, why, and when
 - improved UX of downloading [proposal bundles](https://github.com/decred/politeiagui/pull/2453)
@@ -89,7 +88,7 @@ User-facing:
 - show a [warning](https://github.com/decred/politeiagui/pull/2500) about possible data loss when saving drafts
 - ~11 frontend and ~1 backend bug fixes
 
-Internal:
+Internal and developer:
 
 - allow multiple values in [plugin settings](https://github.com/decred/politeia/pull/1451)
 - added test coverage for proposal [validation](https://github.com/decred/politeia/pull/1453)
@@ -101,7 +100,7 @@ CMS:
 
 - ~1 frontend and ~2 backend bug fixes
 
-Changes waiting for deployment are marked with a `pi-not-deployed` label in both [politeiagui](https://github.com/decred/politeiagui/issues?q=label%3Api-not-deployed) and [politeia](https://github.com/decred/politeia/pulls?q=label%3Api-not-deployed) repos.
+Changes awaiting deployment are marked with a `pi-not-deployed` label in both [politeiagui](https://github.com/decred/politeiagui/issues?q=label%3Api-not-deployed) and [politeia](https://github.com/decred/politeia/pulls?q=label%3Api-not-deployed) repos.
 
 <a id="vspd" />
 
@@ -131,7 +130,7 @@ User-facing:
 - log [swap refund](https://github.com/decred/dcrdex/pull/1110) transactions so that the user can salvage funds when access to the client is lost but the logs are still available
 - added [export](https://github.com/decred/dcrdex/pull/1109) of orders in CSV file
 - group orders with [same rate](https://github.com/decred/dcrdex/pull/1090) into one table row
-- show price in browser window [title](https://github.com/decred/dcrdex/pull/1117)
+- show current price in browser window [title](https://github.com/decred/dcrdex/pull/1117)
 - show order errors [on the form](https://github.com/decred/dcrdex/pull/1093) instead of the notification bell
 - 4+ bug fixes
 
@@ -149,7 +148,7 @@ Ethereum support:
 - store ETH balance in [gwei](https://github.com/decred/dcrdex/pull/1078) units to fit 64-bit integers
 - implemented ETH [sync status](https://github.com/decred/dcrdex/pull/1082) and fee rate information (with a workaround, missing Geth feature [requested](https://github.com/ethereum/go-ethereum/issues/23099))
 
-A few fixes have been [backported](https://github.com/decred/dcrdex/commits/release-v0.2) for an upcoming v0.2.1 release.
+A few fixes have been [backported](https://github.com/decred/dcrdex/commits/release-v0.2) to an upcoming v0.2.1 release.
 
 <a id="dcrandroid" />
 
@@ -171,7 +170,7 @@ A few fixes have been [backported](https://github.com/decred/dcrdex/commits/rele
 - implemented custom [toggle](https://github.com/planetdecred/godcr/pull/487) widget
 - [hide](https://github.com/planetdecred/godcr/pull/493) staking balances and imported account when they have no funds
 - added [License](https://github.com/planetdecred/godcr/pull/516) page
-- UI updates and code cleanup for: [Proposal](https://github.com/planetdecred/godcr/pull/513) list and details, [Wallet](https://github.com/planetdecred/godcr/pull/496), [Wallets](https://github.com/planetdecred/godcr/pull/493), [Send](https://github.com/planetdecred/godcr/pull/524), [StakeShuffle](https://github.com/planetdecred/godcr/pull/534), and several [Tickets](https://github.com/planetdecred/godcr/pull/539) pages
+- UI updates and massive code cleanup for: [Proposal](https://github.com/planetdecred/godcr/pull/513) list and details, [Wallet](https://github.com/planetdecred/godcr/pull/496), [Wallets](https://github.com/planetdecred/godcr/pull/493), [Send](https://github.com/planetdecred/godcr/pull/524), [StakeShuffle](https://github.com/planetdecred/godcr/pull/534), and several [Tickets](https://github.com/planetdecred/godcr/pull/539) pages
 - pages and modals grouped into [packages](https://github.com/planetdecred/godcr/pull/512)
 - 6+ bug fixes
 
@@ -181,15 +180,15 @@ A few fixes have been [backported](https://github.com/decred/dcrdex/commits/rele
 
 User-facing:
 
-- [optimized](https://github.com/decred/dcrdata/pull/1840) initial sync, vouts table, address cache and search page performance
-- switched from gob encoding to custom [serialization](https://github.com/decred/dcrdata/pull/1843) of the ticket pool, making startup ~5 seconds faster
 - fixed changing of [vote status](https://github.com/decred/dcrdata/pull/1838) on Proposals page
 - fixed agenda quorum [threshold](https://github.com/decred/dcrdata/pull/1813)
 - changed Block page to use ["approved"/"disapproved"](https://github.com/decred/dcrdata/pull/1841) terms instead of "valid"/"invalid"
 
 Internal and developer:
 
+- [optimized](https://github.com/decred/dcrdata/pull/1840) initial sync, vouts table, address cache and search page performance
 - [optimized](https://github.com/decred/dcrdata/pull/1844) performance and improved startup
+- switched from gob encoding to custom [serialization](https://github.com/decred/dcrdata/pull/1843) of the ticket pool, making startup ~5 seconds faster
 - fixed [purging](https://github.com/decred/dcrdata/pull/1842) of vouts table
 - added a [test harness](https://github.com/decred/dcrdata/pull/1778) using simnet chain instead of a dcrdata snapshot
 
@@ -205,13 +204,13 @@ Internal and developer:
 
 **[decred.org](https://github.com/decred/dcrweb)**
 
-- added percentage of [revoked](https://github.com/decred/dcrweb/pull/993) tickets to the [VSP page](https://decred.org/vsp/) (useful metric for choosing a VSP)
+- added percentage of [revoked](https://github.com/decred/dcrweb/pull/993) tickets to the [VSP page](https://decred.org/vsp/) (a helpful metric when choosing a VSP)
 - show [both](https://decred.org/) press releases and latest posts at [decred.org](https://decred.org/) home page
 - added the [press release](https://decred.org/press/2021-05-25_dex_decrediton/) about DCRDEX integration in Decrediton
 
 Other:
 
-- Bug Bounty Program [reported](https://bounty.decred.org/2021/07/status-update/) stats at the end of Phase 3 (June 30) a total of 193 submissions processed, with 18 being eligible for a payout. Maximum bounty amounts have been [increased](https://github.com/decred/dcrbounty/pull/79/files).
+- Bug Bounty Program [reported](https://bounty.decred.org/2021/07/status-update/) stats at the end of Phase 3 (June 30): a total of 193 submissions processed, with 18 being eligible for a payout. Maximum bounty amounts have been [increased](https://github.com/decred/dcrbounty/pull/79/files).
 
 
 ## People
