Dev woocommerce plugin

--- a/journal/202107.md
+++ b/journal/202107.md
@@ -208,6 +208,12 @@ Internal and developer:
 - show [both](https://decred.org/) press releases and latest posts at [decred.org](https://decred.org/) home page
 - added the [press release](https://decred.org/press/2021-05-25_dex_decrediton/) about DCRDEX integration in Decrediton
 
+<a id="woocommerce-plugin" />
+
+**[WooCommerce Plugin](https://github.com/karamble/decred-woocommerce-plugin)**
+
+@karamble released a new plugin for accepting DCR payments in [WooCommerce](https://en.wikipedia.org/wiki/WooCommerce) shops. It can generate payment addresses using wallet account's XPUB (extended public key). This way each payment uses a new unique address but the shop's web server has no access to the wallet.
+
 Other:
 
 - Bug Bounty Program [reported](https://bounty.decred.org/2021/07/status-update/) stats at the end of Phase 3 (June 30): a total of 193 submissions processed, with 18 being eligible for a payout. Maximum bounty amounts have been [increased](https://github.com/decred/dcrbounty/pull/79/files).
