Dev add 2 reviews

--- a/journal/202107.md
+++ b/journal/202107.md
@@ -417,6 +417,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: bee, degeri, richardred
-- reviews and feedback: davecgh
+- reviews and feedback: davecgh, lukebp, raedah
 - title image: {}
 - funding: Decred stakeholders
