--- a/journal/202107.md
+++ b/journal/202107.md
@@ -271,18 +271,19 @@ See Politeia Digest [issue 44](https://blockcommons.red/politeia-digest/issue044
 
 **Hashrate**: July's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) opened at ~71 Ph/s and closed ~316 Ph/s, bottoming at 70 Ph/s and peaking at 334 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 58%, F2Pool 23%, Antpool 6%, BTC.com 4%, Easy2mine 4%, Luxor 2.3%, Huobipool 1%, ViaBTC 0.4%,Coinmine 0.09%, okex 0.08%, UUPool 0.06%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 58%, F2Pool 23%, AntPool 6%, BTC.com 4%, Easy2Mine 4%, Luxor 2.3%, HuobiPool 1%, ViaBTC 0.4%, CoinMine 0.09%, OKEx 0.08%, UUPool 0.06%.
 
+Hashrate is recovering from June's [events](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere) in China and new mining pools join the network.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
+Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Aug 1 closely matched the reported hashrate.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kqhwurpw-kru2wj65&bin=window&axis=time&visibility=true-true) varied between 203.2-146.3 DCR, with 30-day [average](https://dcrstats.com/) at 190.7 DCR (+6).
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kqhwurpw-kru2wj65&bin=window&axis=time&visibility=true-true&mode=stepped) varied between 146.3-203.2 DCR, with 30-day [average](https://dcrstats.com/) at 190.7 DCR (+6).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) was 7.43-7.87 million DCR, meaning that 56.3-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) in proof-of-stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) was 7.43-7.88 million DCR, meaning that 56.3-59.8% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-{ recap of ticket price action if it was interesting }
+Ticket price had an unusual drop below 2020 lows but later recovered with a strong buy support.
 
 **VSP**: On {}, {} (+{}) live tickets were managed by vspd servers and {} (-{}) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed 60% of the ticket pool.
 
@@ -306,6 +307,14 @@ Node versions as of Aug 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 { check https://github.com/decred/dcrwebapi/pulls for new VSPs }
 
 { check #services for news }
+
+{ search start dates for these in (#pow-mining, twitter, medium, site, etc)
+
+- OKEx PoW pool https://www.okex.com/pool
+- ViaBTC PoW pool https://www.viabtc.com/
+  - https://viabtc.medium.com/viabtc-pool-unveils-dcr-on-chain-co-governance-under-hybrid-consensus-61fcbd133a55
+
+}
 
 { check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
 
