--- a/journal/202107.md
+++ b/journal/202107.md
@@ -285,7 +285,9 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 Ticket price had an unusual drop below 2020 lows but later recovered with a strong buy support.
 
-**VSP**: On {}, {} (+{}) live tickets were managed by vspd servers and {} (-{}) by the [listed](https://decred.org/vsp/) legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed 60% of the ticket pool.
+**VSP**: On Aug 1, ~8,600 (+600) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and ~400 (-200) by listed legacy dcrstakepool servers. Collectively the 11 legacy and 14 new VSPs managed 22.9% (+2%) of the ticket pool. Unlisted but still active legacy VSPs managed 12 live tickets (-14).
+
+Biggest ticket gainers in absolute terms were stakey.com (+474), 123.dcr.rocks (+126) and ubiqsmart.com (+51). The first two have fees below 0.5%.
 
 **Nodes**: Throughout July there were around 211 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
@@ -293,7 +295,7 @@ Node versions as of Aug 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (2
 
 { maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
 
-{ maybe } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 36 nodes (+2), 66 channels (+6) with a total capacity of 25.5 DCR (+3.7), as of Aug 1.
 
 { any interesting analysis or events in the network }
 
