--- a/journal/202107.md
+++ b/journal/202107.md
@@ -267,17 +267,11 @@ See Politeia Digest [issue 44](https://blockcommons.red/politeia-digest/issue044
 
 ## Network
 
-{ section hint: use the same `zoom` parameter for all dcrdata links }
-
 **Hashrate**: July's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) opened at ~71 Ph/s and closed ~316 Ph/s, bottoming at 70 Ph/s and peaking at 334 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 58%, F2Pool 23%, AntPool 6%, BTC.com 4%, Easy2Mine 4%, Luxor 2.3%, HuobiPool 1%, ViaBTC 0.4%, CoinMine 0.09%, OKEx 0.08%, UUPool 0.06%.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 58%, F2Pool 23%, AntPool 6%, BTC.com 4%, Easy2Mine 4%, Luxor 2.3%, HuobiPool 1%, ViaBTC 0.4%, CoinMine 0.09%, OKEx 0.08%, UUPool 0.06%. Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Aug 1 closely matched the reported hashrate.
 
 Hashrate is recovering from June's [events](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere) in China and new mining pools join the network.
-
-{ hint: fallback link for pool distribution: https://dcrstats.com/pow }
-
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Aug 1 closely matched the reported hashrate.
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kqhwurpw-kru2wj65&bin=window&axis=time&visibility=true-true&mode=stepped) varied between 146.3-203.2 DCR, with 30-day [average](https://dcrstats.com/) at 190.7 DCR (+6).
 
@@ -292,8 +286,6 @@ Biggest ticket gainers in absolute terms were stakey.com (+474), 123.dcr.rocks (
 **Nodes**: Throughout July there were around 211 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
 Node versions as of Aug 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (250): v1.6.2 - 57%, v1.6.0 - 16%, v1.6.1 - 13%, v1.7 dev builds - 7%, v1.6 dev builds - 3%, v1.5.2 - 2%, v1.5.1 - 1.6%.
-
-{ maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 36 nodes (+2), 66 channels (+6) with a total capacity of 25.5 DCR (+3.7), as of Aug 1.
 
