--- a/journal/202107.md
+++ b/journal/202107.md
@@ -298,7 +298,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen 36 nodes (+
 
 Welcome the new vspd instance [dcrvsp.dittrex.com](https://dcrvsp.dittrex.com/), coming to replace their legacy VSP which was [delisted](https://github.com/decred/dcrwebapi/pull/140) in May and shutdown in July.
 
-Legacy VSP [pool.d3c.red](https://pool.d3c.red) from @karamble voted its final ticket and was shutdown. Users are welcome to use the replacement server [vsp.decredcommunity.org](https://vsp.decredcommunity.org/).
+Legacy VSP [pool.d3c.red](https://pool.d3c.red) from @karamble voted its final ticket and was shutdown. Users are welcome to the replacement server at [vsp.decredcommunity.org](https://vsp.decredcommunity.org/).
 
 So far 8 legacy VSPs have been delisted (3 shutdown, 1 status unknown, 4 still voting) and 9 are still listed. The status of migration to the new [VSP system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/) is summarized in [this table](https://github.com/decred/vspd/issues/231#issuecomment-774877129). It is [recommended](https://twitter.com/JamieHoldstock/status/1405069123453784065) that legacy VSP users upgrade to vspd to avoid the risk of missed tickets when dcrstakepool stops working (e.g. if a new consensus upgrade is activated).
 
@@ -306,9 +306,9 @@ The [VSP list](https://decred.org/vsp/) has been updated to show the percentage 
 
 [ViaBTC](https://www.viabtc.com/) announced the [launch](https://viabtc.medium.com/viabtc-pool-unveils-dcr-on-chain-co-governance-under-hybrid-consensus-61fcbd133a55) of DCR mining, celebrated by a "Fee-free Mining Carnival" until Aug 25. The pool supports PPS+, PPLNS and SOLO payment [methods](https://support.viabtc.com/hc/en-us/articles/4403972374297-DCR-Mining-Pool-Launched-Mine-with-ZERO-Fees-For-30-days).
 
-[OKEx pool](https://www.okex.com/pool) has DCR mining since [Aug 2020](https://www.okex.com/academy/en/how-to-earn-cryptocurrency-with-okex-pool) or earlier, but only in July it got some blocks mined according to [miningpoolstats.stream](https://miningpoolstats.stream/decred).
+[OKEx pool](https://www.okex.com/pool) has DCR mining since [Aug 2020](https://www.okex.com/academy/en/how-to-earn-cryptocurrency-with-okex-pool) or earlier, but in July it has finally mined some blocks, according to [miningpoolstats.stream](https://miningpoolstats.stream/decred).
 
-[Bitfinex](https://www.bitfinex.com/) [pre-announced](https://twitter.com/bitfinex/status/1421032832848302081) DCR trading and then [posted](https://twitter.com/bitfinex/status/1423210403774009345) that DCR/USD trading has started.
+[Bitfinex](https://www.bitfinex.com/) [pre-announced](https://twitter.com/bitfinex/status/1421032832848302081) a DCR listing and in early Aug [posted](https://twitter.com/bitfinex/status/1423210403774009345) that DCR/USD trading is live.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
