--- a/journal/202107.md
+++ b/journal/202107.md
@@ -36,7 +36,7 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 - updated the `UtxoBackend` implementation to use `leveldb` directly rather than using the `database` package. This results in ~10% faster initial blockchain download and ~12% reduced memory usage.
 - block index changed to use [short keys](https://github.com/decred/dcrd/pull/2685), resulting in ~30 MiB memory savings
-- added size [limits](https://github.com/decred/dcrd/pull/2675) for RPC requests to help further harden the server against potential abuse in non-standard configurations on poorly-configured networks
+- added size [limits](https://github.com/decred/dcrd/pull/2675) for RPC requests to help further harden the server against potential abuse in non-standard configurations on poorly configured networks
 - added a more strict [origin check](https://github.com/decred/dcrd/pull/2676) for WebSocket connections
 - smaller fixes and cleanup
 
@@ -71,7 +71,7 @@ Internal:
 
 - migrated to new [Politeia API](https://github.com/decred/decrediton/pull/3495)
 - automated tests for [Transaction](https://github.com/decred/decrediton/pull/3518) page
-- removed the use of [winston](https://github.com/decred/decrediton/pull/3536) logging library to reduce project's dependency tree
+- removed the use of [winston](https://github.com/decred/decrediton/pull/3536) logging library to reduce the project's dependency tree
 
 <a id="politeia" />
 
@@ -79,7 +79,7 @@ Internal:
 
 User-facing:
 
-- capture additional proposal [metadata](https://github.com/decred/politeiagui/pull/2469) like USD funding limit, start date, estimated end date, and domain. This will allow to improve and automate contractor invoice validation, and also to generate proposal stats on Politeia.
+- capture additional proposal [metadata](https://github.com/decred/politeiagui/pull/2469) like USD funding limit, start date, estimated end date, and domain. This will allow us to improve and automate contractor invoice validation, and also to generate proposal stats on Politeia.
 - added [rate limiting](https://github.com/decred/politeia/pull/1448) for email notifications to prevent malicious behavior
 - show who [censored](https://github.com/decred/politeiagui/pull/2454) a record, why, and when
 - improved UX of downloading [proposal bundles](https://github.com/decred/politeiagui/pull/2453)
@@ -130,7 +130,7 @@ User-facing:
 - log [swap refund](https://github.com/decred/dcrdex/pull/1110) transactions so that the user can salvage funds when access to the client is lost but the logs are still available
 - added [export](https://github.com/decred/dcrdex/pull/1109) of orders in CSV file
 - group orders with [same rate](https://github.com/decred/dcrdex/pull/1090) into one table row
-- show current price in browser window [title](https://github.com/decred/dcrdex/pull/1117)
+- show the current price in browser window [title](https://github.com/decred/dcrdex/pull/1117)
 - show order errors [on the form](https://github.com/decred/dcrdex/pull/1093) instead of the notification bell
 - 4+ bug fixes
 
@@ -188,7 +188,7 @@ User-facing:
 
 Internal and developer:
 
-- [optimized](https://github.com/decred/dcrdata/pull/1840) initial sync, vouts table, address cache and search page performance
+- [optimized](https://github.com/decred/dcrdata/pull/1840) initial sync, vouts table, address cache, and search page performance
 - [optimized](https://github.com/decred/dcrdata/pull/1844) performance and improved startup
 - switched from gob encoding to custom [serialization](https://github.com/decred/dcrdata/pull/1843) of the ticket pool, making startup ~5 seconds faster
 - fixed [purging](https://github.com/decred/dcrdata/pull/1842) of vouts table
@@ -214,7 +214,7 @@ Internal and developer:
 
 **[WooCommerce Plugin](https://github.com/karamble/decred-woocommerce-plugin)**
 
-@karamble released a new plugin for accepting DCR payments in [WooCommerce](https://en.wikipedia.org/wiki/WooCommerce) shops. It can generate payment addresses using wallet account's XPUB (extended public key). This way each payment uses a new unique address but the shop's web server has no access to the wallet.
+@karamble released a new plugin for accepting DCR payments in [WooCommerce](https://en.wikipedia.org/wiki/WooCommerce) shops. It can generate payment addresses using the wallet account's XPUB (extended public key). This way each payment uses a new unique address but the shop's web server has no access to the wallet.
 
 Other:
 
@@ -249,14 +249,14 @@ Community stats as of Aug 1:
 
 ## Governance
 
-In July the new [treasury](https://dcrdata.decred.org/treasury) received 11,338 DCR worth $1.44M at July's average rate of $127.48. 770 DCR was spent to pay contractors, worth $98K at July's rate, or $101K at June's billing rate of $131.52. As of Aug 2, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new treasury is 703,655 DCR (96.3 million USD at $136.80).
+In July the new [treasury](https://dcrdata.decred.org/treasury) received 11,338 DCR worth $1.44M at July's average rate of $127.48. 770 DCR was spent to pay contractors, worth $98K at July's rate, or $101K at June's billing rate of $131.52. As of Aug 2, the combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new treasury is 703,655 DCR (96.3 million USD at $136.80).
 
 { check the legacy treasury for any activity rr: there are some bits of DCR arriving at it, including what look like outputs from votes... quite [strange](https://explorer.dcrdata.org/tx/2411c14283d5810e0d7f6d1f174e42cb4cf536fb2f7dd51b96d63c9087766e10/in/13)}
 
-There were 4 new proposals published in July, and three are still under discussion at time of writing.
+There were 4 new proposals published in July, and three are still under discussion at time of writing. {Changed now}
 
 - A [proposal](https://proposals.decred.org/record/ae609f1) from @frizzers to make a copyleft documentary film that can be freely shared, based on his book "Daylight Robbery", at a cost of $300K.
-- A [proposal](https://proposals.decred.org/record/51c4128) to fund people at attend Crypto Expo Dubai in October 2021 has presented two options, costing $21,240 to fly 4 Decred representatives in to Dubai for the conference, or $26,240 to also pay for a presentation slot at the event. @sz1 will choose one option based on community feedback.
+- A [proposal](https://proposals.decred.org/record/51c4128) to fund people to attend Crypto Expo Dubai in October 2021 has presented two options, costing $21,240 to fly 4 Decred representatives in to Dubai for the conference, or $26,240 to also pay for a presentation slot at the event. @sz1 will choose one option based on community feedback.
 - A [proposal](https://proposals.decred.org/record/a3fa55f) to fund a 3 part science fiction miniseries has been withdrawn by its owner.
 - Proposals were approved for the Automatic Tickets Revocations Consensus [Change](https://proposals.decred.org/record/e2d7b7d) (95% approval, 51% participation) and a Twitter [bot](https://proposals.decred.org/record/2895755) (85% approval, 46% turnout).
 
@@ -283,7 +283,7 @@ Ticket price had an unusual drop below 2020 lows but later recovered with a stro
 
 **VSP**: On Aug 1, ~8,600 (+600) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and ~400 (-200) by listed legacy dcrstakepool servers. Collectively the 11 legacy and 14 new VSPs managed 22.9% (+2%) of the ticket pool. Unlisted but still active legacy VSPs managed 12 live tickets (-14).
 
-Biggest ticket gainers in absolute terms were stakey.com (+474), 123.dcr.rocks (+126) and ubiqsmart.com (+51). The first two have fees below 0.5%.
+The biggest ticket gainers in absolute terms were stakey.com (+474), 123.dcr.rocks (+126) and ubiqsmart.com (+51). The first two have fees below 0.5%.
 
 **Nodes**: Throughout July there were around 211 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
@@ -304,9 +304,9 @@ So far 8 legacy VSPs have been delisted (3 shutdown, 1 status unknown, 4 still v
 
 The [VSP list](https://decred.org/vsp/) has been updated to show the percentage of revoked tickets, which is a helpful metric when choosing a VSP.
 
-[ViaBTC](https://www.viabtc.com/) announced the [launch](https://viabtc.medium.com/viabtc-pool-unveils-dcr-on-chain-co-governance-under-hybrid-consensus-61fcbd133a55) of DCR mining, celebrated by a "Fee-free Mining Carnival" until Aug 25. The pool supports PPS+, PPLNS and SOLO payment [methods](https://support.viabtc.com/hc/en-us/articles/4403972374297-DCR-Mining-Pool-Launched-Mine-with-ZERO-Fees-For-30-days).
+[ViaBTC](https://www.viabtc.com/) announced the [launch](https://viabtc.medium.com/viabtc-pool-unveils-dcr-on-chain-co-governance-under-hybrid-consensus-61fcbd133a55) of DCR mining, celebrated by a "Fee-free Mining Carnival" until Aug 25. The pool supports PPS+, PPLNS, and SOLO payment [methods](https://support.viabtc.com/hc/en-us/articles/4403972374297-DCR-Mining-Pool-Launched-Mine-with-ZERO-Fees-For-30-days).
 
-[OKEx pool](https://www.okex.com/pool) has DCR mining since [Aug 2020](https://www.okex.com/academy/en/how-to-earn-cryptocurrency-with-okex-pool) or earlier, but in July it has finally mined some blocks, according to [miningpoolstats.stream](https://miningpoolstats.stream/decred).
+[OKEx pool](https://www.okex.com/pool) has been DCR mining since [Aug 2020](https://www.okex.com/academy/en/how-to-earn-cryptocurrency-with-okex-pool) or earlier, but in July it has finally mined some blocks, according to [miningpoolstats.stream](https://miningpoolstats.stream/decred).
 
 [Bitfinex](https://www.bitfinex.com/) [pre-announced](https://twitter.com/bitfinex/status/1421032832848302081) a DCR listing and in early Aug [posted](https://twitter.com/bitfinex/status/1423210403774009345) that DCR/USD trading is live.
 
