--- a/journal/202107.md
+++ b/journal/202107.md
@@ -342,14 +342,11 @@ Secured the following news articles:
 
 Attended:
 
-- https://twitter.com/blockchain_land/status/1414605579440492544
-- https://decredcommunity.github.io/events/index/20210710.1
+- Jul 5 - [Talent Land Digital](https://github.com/decredcommunity/events/pull/95) - Internet. @pablito gave a 25 min keynote on "What is Decred" (34K views) and a 58 min workshop "Blockchain introduction using dcrdata API" (47K views). Decred is a Bronze sponsor of Talend Land.
 
-Upcoming:
+- Jul 10 - [YOUCATHON: Youth For Change & Action (100 % Digital)](https://decredcommunity.github.io/events/index/20210710.1) - Youssoufia, Morocco. Computer science school YouCode organized a hackathon between two campuses in Youssoufia and Safi, connected over a video conference. @arij was invited to talk about blockchain technology. In her ~80 min talk she explained the tech and demonstrated Decred wallet and Politeia. Questions concerned how this can be used to build application and what opportunities exist to work in blockchain projects, so @arij explained her role in Decred and how to join.
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{ announcements from events ppl }
+- Since early 2021 Decred is a supporter of the [education program](https://twitter.com/IECarballo/status/1417491314191519751) about cryptocurrency and blockchain tech organized by the Business School of the Catholic University of Argentina and Bitcoin Argentina NGO.
 
 
 ## Media
