--- a/journal/202107.md
+++ b/journal/202107.md
@@ -426,9 +426,16 @@ In July DCR was trading between USD 91.7-158.46 / BTC 0.003377-0.003812. The ave
 
 { cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
 
+Thorchain has been hit by two attacks this month. The [first](https://decrypt.co/76215/thorchain-tapping-treasury-repay-5m-ethereum-after-attack) affected ETH liquidity providers, whose pools were drained of $5M, and they will be compensated from the Thorchain treasury. The [second](https://www.coindesk.com/thorchain-8-million-exploit-bifrost) attack claimed $8M by tricking the network's Bifrost protocol into receiving fake assets - it could apparently have been much worse if not for the hacker's [seeming](https://twitter.com/THORChain/status/1418360743523618825) whitehat tendencies. Things may be looking up for Thorchain however, as the last attacker left [instructions](https://news.bitcoin.com/thorchain-trolled-by-hacker-after-two-successful-seven-figure-exploits/) for how they can improve security.
+
 { governance, funding, chain forks, community splits }
 
+Uniswap has voted to [fund](https://www.coindesk.com/defi-gets-proactive-about-policy-thanks-to-a-20m-grant-from-the-uniswap-community) a "DeFi Education Fund" with 1 million UNI (worth around $20 million), half of which they immediately traded for USDC. This proposal was originally billed as a "political defence fund", to pay representatives who can fight DeFi's corner with regulators. There are been some [criticism](
+https://decrypt.co/75841/uniswap-proposal-sparks-blowback-after-grantees-dump-10m-uni-tokens) of the role that UNI whales who are associated with the proposers played in approving this proposal.
+
 { DEX }
+
+The ShapeShift organization is [closing](https://www.coindesk.com/shapeshift-to-shut-down-airdrop-fox-tokens-to-decentralize-itself-out-of-existence) its doors in an effort to "decentralize itself out of existence". It is airdropping FOX tokens to its users and users of a number of DeFi protocols, and those tokens will be used to govern a DAO (which is also receiving a token allocation). The airdrop is complex as it covers a range of blockchains, but users will only have 100 days to claim their FOX tokens before these revert to the DAO.
 
 { relevant exchanges and websites }
 
