--- a/journal/202107.md
+++ b/journal/202107.md
@@ -326,21 +326,20 @@ Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat t
 
 { collecting feedback what content the bot should generate https://twitter.com/StakeShuffle_/status/1418895005050155011 - ecosystem maybe? }
 
-Monde PR’s achievements for July:
+Monde PR's achievements for July:
  
-- Pitched one story to finance and crypto publications
-- Pitched Decred to four PR opportunities 
-- Secured two media interviews
+- pitched 1 story to finance and crypto publications
+- pitched Decred to 4 PR opportunities 
+- secured 2 media interviews
 
 Secured the following news articles:
 
-- @lukebp was interviewed by Geek Insider’s podcast, [Geek Speak](https://www.youtube.com/watch?v=a9IQyMf_724), covering all major aspects of Decred
-- An article in [The Street](https://www.thestreet.com/personal-finance/should-you-worry-about-crypto-crashing-nw) featuring commentary from @jy-p on how to buy crypto, syndicated from NerdWallet 
-- An article in [MarketWatch](https://www.marketwatch.com/story/what-to-do-when-your-digital-assets-take-a-dive-11625258295) featuring commentary from @jy-p on how to buy crypto, syndicated from NerdWallet. The article was also syndicated to seven other publications including [MSN](https://www.msn.com/en-us/money/savingandinvesting/what-to-do-when-your-digital-assets-take-a-dive/ar-AALOVNE).
-- News about Decred passing a vote to make a consensus change to ticket revocations was covered by [Bankless Times](https://www.banklesstimes.com/2021/07/28/decred-continues-to-evolve-without-contentious-hard-forks/), [Crowdfund Insider](https://www.crowdfundinsider.com/2021/07/178473-decred-dcr-a-virtual-currency-focused-on-security-and-scalability-to-enhance-user-experience/) and [Geek Insider](https://geekinsider.com/no-contentious-hardforks-as-decred-evolves/). @lukebp was also interviewed by the Crypto and Cigars podcast to talk about Decred’s upgradability.  
+- @lukebp was interviewed by Geek Insider's podcast, [Geek Speak](https://www.youtube.com/watch?v=a9IQyMf_724), covering all major aspects of Decred
+- an article in [The Street](https://www.thestreet.com/personal-finance/should-you-worry-about-crypto-crashing-nw) featuring commentary from @jy-p on how to buy crypto, syndicated from NerdWallet
+- an article in [MarketWatch](https://www.marketwatch.com/story/what-to-do-when-your-digital-assets-take-a-dive-11625258295) featuring commentary from @jy-p on how to buy crypto, syndicated from NerdWallet. The article was also syndicated to 7 other publications including [MSN](https://www.msn.com/en-us/money/savingandinvesting/what-to-do-when-your-digital-assets-take-a-dive/ar-AALOVNE).
+- news about Decred passing a vote to make a consensus change to ticket revocations was covered by [Bankless Times](https://www.banklesstimes.com/2021/07/28/decred-continues-to-evolve-without-contentious-hard-forks/), [Crowdfund Insider](https://www.crowdfundinsider.com/2021/07/178473-decred-dcr-a-virtual-currency-focused-on-security-and-scalability-to-enhance-user-experience/) and [Geek Insider](https://geekinsider.com/no-contentious-hardforks-as-decred-evolves/). @lukebp was also interviewed by the Crypto and Cigars podcast to talk about Decred's upgradability.
 - Finder.com published the results of its cryptocurrency predictions survey, featuring quotes from @jz in an article about [Bitcoin price prediction](https://www.finder.com/bitcoin-btc-price-prediction) and an article about [Doge price prediction](https://www.finder.com/hk/dogecoin-doge-price-prediction). The news was picked up by [The Block News](https://theblocknews.io/finders-experts-predict-dogecoin-price-should-hit-1-21-by-2025-and-3-60-by-2030/), [FinBold](https://finbold.com/50-of-crypto-experts-expect-bitcoin-to-overtake-global-finance-by-2040/), [CryptoKnowmics](https://www.cryptoknowmics.com/news/crypto-experts-optimistic-for-bitcoin-believes-btc-will-replace-fiat-currency-by-2040-in-hyperbitcoinisation), [Bitcoin News](https://news.bitcoin.com/crypto-experts-predict-bitcoin-price-rising-to-318417-by-december-2025/), a second article in [Bitcoin News](https://news.bitcoin.com/finders-experts-predict-dogecoin-price-should-hit-1-21-by-2025-and-3-60-by-2030/) and [The Hack Posts](https://thehackposts.com/crypto-experts-predict-bitcoin-price-rising-to-318417-by-december-2025-markets-and-prices-bitcoin-news/). The articles mention that Decred was part of a panel of 42 experts who completed the survey, including representatives from Thomson Reuters, UCL School of Management and the University of Western Australia.
-- @raedah was interviewed for Authority Magazine’s [The Future is Now](https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f) series, talking about all things Decred and crypto, including privacy, governance, Decred being the first true crypto DAO and Decred's use in Brazil's election.
-
+- @raedah was interviewed for Authority Magazine's [The Future is Now](https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f) series, talking about all things Decred and crypto, including privacy, governance, Decred being the first true crypto DAO and Decred's use in Brazil's election.
 
 
 ## Events
